# yph-evalbot

./: .gitignore  ChangeLog.md  LICENSE  README.md  evalbot.cabal
docker/: Dockerfile
src/: DiscordBot.hs  Evaluate.hs  Main.hs  Slack.hs
